<resources>
    <string name="app_name">We Muslim</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descloginjudul">Masukan nama atau email dan  password anda disini.</string>
    <string name="app_name_gede">WE - MUSLIM</string>
    <string name="textforgot">Lupa kata sandi?</string>
    <string name="login">Masuk</string>
    <string name="registerHere">Tidak mempunyai akun? </string>
    <string name="register">Daftar</string>
    <string name="started">Mulai Sekaranng</string>
    <string name="login_lobby">Masukan Akun</string>
    <string name="title_activity_dzikir_sholat">DzikirSholatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jdl_tahmid">Tahmid</string>
    <string name="img_content_takbir">Image Allahuakbar</string>
    <string name="img_content_tahmid">Image Alhamdulilah</string>
    <string name="img_content_tasbih">image subhanaullah</string>
    <string name="sholat_back_home">Kembali ke halaman utama</string>
    <string name="txt_masukan_nama_anda">Masukan nama anda</string>
    <string name="txt_masukan_kata_sandi">Masukan kata sandi</string>
    <string name="txt_masukan_email">Masukan email anda</string>
    <string name="txt_save">Simpan informasi</string>


</resources>