<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".home.Login.LoginActivity">

    <TextView
        android:id="@+id/txt_judullogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name_gede"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_descloginjudul"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="2"
        android:text="@string/descloginjudul"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_judullogin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="240dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_lytnama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukan nama atau email"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_lytsandi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Masukan kata sandi"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:passwordToggleEnabled="true"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/txt_input_lytnama">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/google_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_lytsandi" />

    <ImageView
        android:id="@+id/img_facebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/facebook_icon"
        app:layout_constraintLeft_toLeftOf="@id/img_google"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_lytsandi" />

    <TextView
        android:id="@+id/txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:fontFamily="@font/poppins_regular"
        android:text="@string/textforgot"
        android:textColor="@color/inti"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_input_lytsandi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="480dp" />

    <Button
        android:id="@+id/btn_con"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="580dp" />

    <TextView
        android:id="@+id/txt_register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerHere"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <TextView
        android:id="@+id/txt_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/inti"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toRightOf="@id/txt_register_here"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />


</androidx.constraintlayout.widget.ConstraintLayout>